--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -63,8 +63,7 @@ h2{
   font-family: "Nunito Sans", sans-serif;
 }
 
-#cuadro_interactivo3{
-  h1{
+#cuadro_interactivo3 h1{
     font-size: 2em;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -73,8 +72,6 @@ h2{
     font-weight: bold;
     unicode-bidi: isolate;
   }
-}
-
 /* contenido oculto */
 .contenido-oculto{
   background-color: #A3D4D2;
