--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -85,7 +85,15 @@ main{
     font-family: "Nunito Sans", sans-serif;
 }
 
-#img_center .container-img {
-    text-align: center;
-    justify-content: center;
- }
+.container-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Puedes ajustar la altura según sea necesario */
+}
+
+/* La imagen se ajustará responsivamente */
+img {
+  max-width: 100%;
+  height: auto;
+}
