tipos de diseños

--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -28,15 +28,21 @@ main{
     padding: 0px;
 }
 
-h1 {
+#containertitulo{
+  padding: 0px;
+  margin: 0;
+}
+
+#containertitulo h1 {
   size: 50px;
   padding-top: 40px;
   margin-bottom: 40px;
   margin-left: 40px;
 }
 
-#descripcion p{
+#containertitulo p{
   max-width: 800px;
+  height: 182px;
   margin-bottom: 5px;
   margin: 50px auto;
   padding: 0 20px;
@@ -44,7 +50,7 @@ h1 {
   font-family: "Nunito Sans", sans-serif;
 }
 
-#containertitulo h2{
+#container_principal h2{
   padding-top: 40px;
   margin-bottom: 40px;
   margin-left: 40px;
