--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -43,8 +43,7 @@ main{
 #containertitulo p{
   max-width: 800px;
   height: 182px;
-  margin-bottom: 5px;
-  margin: 50px auto;
+  margin-bottom: 50px;
   padding: 0 20px;
   text-align: left;
   font-family: "Nunito Sans", sans-serif;
@@ -122,7 +121,7 @@ main{
   margin-bottom: 20px;
 }
 
-#contenido-1, #contenido-2{
+#contenido-1, #contenido-2, #contenido-3{
   display: none;
 }
 
