--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -24,6 +24,7 @@ main{
 #container_principal{
     background-color: #ffffff;
     padding: 0px;
+    padding-bottom: 60px;
 }
 
 /* descripcion */
@@ -44,12 +45,12 @@ main{
   text-align: left;
   padding: 50px;
   padding-bottom: 0px !important;
+  font-family: "Nunito Sans", sans-serif;
   font-size: 22px;
-  letter-spacing: 1%;
 }
 
 /* areas */
-#container_principal h2{
+#area{
   padding: 60px;
   padding-bottom: 0px !important;
   margin: 0px;
@@ -60,9 +61,6 @@ main{
   padding: 60px;
   padding-bottom: 0px;
   margin: 0px;
-}
-#contenido_final{
-  padding-bottom: 50px;
 }
 
 .container_doble .col-3{
@@ -76,6 +74,8 @@ main{
   font-size: 25px;
   align-items: start;
   justify-content: start;
+  font-family: "Bebas Neue", sans-serif;
+  cursor: pointer;
 }
 
 .container_doble .col-9{
@@ -89,11 +89,6 @@ main{
   align-items: start;
 }
 
-#imagen_industrial, #imagen_grafico, #imagen_interaccion{
-  width: 300px;
-  height: 300px;
-}
-
 /* contenido oculto */
 .contenido-oculto {
   background-color: #A3D4D2; /* Cambia el color de fondo del contenido oculto */
@@ -105,22 +100,37 @@ main{
   display: none;
 }
 
-.contenido-oculto h3{
-  font-size: 50;
-  margin-left: 40px;
+.contenido-oculto .row{
+  padding: 40px;
+}
+
+.contenido-oculto h2{
+  font-size: 22;
+  padding-bottom: 50px;
+}
+
+.contenido-oculto .col-5{
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .contenido-oculto .col-7{
-  padding-left: 30px;
-  padding-right: 30px;
-  
   text-align: left;
   max-width: 800px;
 }
 
 .contenido-oculto p{
-  font-size: 22;
   font-family: "Nunito Sans", sans-serif;
+  font-size: 22px;
+  height: 100%; /* Asegura que p ocupe todo el ancho de col-7 */
+  width: 100%;
+  margin: 0;
+}
+
+#imagen_industrial, #imagen_grafico, #imagen_interaccion{
+  width: 300px;
+  height: 300px;
 }
 
 /* Estilo del triángulo */
