--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -12,13 +12,11 @@ main{
 }
 
 .rectangulopestaña {
-  width: 240px; 
-  height: 40px; 
+  width: 200px;
+  height: 50px;
   margin-left: 80px;
   background-color: #ffffff;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  position: relative;
 }
 
 #container_principal{
