--- a/css/campolaboral.css
+++ b/css/campolaboral.css
@@ -45,6 +45,25 @@ main{
     padding: 0px;
 }
 
+/* Estilo para el contenedor principal */
+#container_principal {
+  position: relative; /* Permitir posicionamiento absoluto de elementos hijos */
+  /* Otros estilos existentes */
+}
+
+/* Estilo para la "X" */
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 20px; 
+  color: #0D5552;
+  font-size: 40px; 
+  text-decoration: none;
+  font-family: 'Bebas Neue', sans-serif; 
+  background: white; 
+  padding: 10px; 
+}
+
 /* descripcion */
 h2{
   padding-top: 40px;
