--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -63,6 +63,25 @@ main{
     margin-right: 80px;
 }
 
+/* Estilo para el contenedor principal */
+#container_principal {
+  position: relative; /* Permitir posicionamiento absoluto de elementos hijos */
+  /* Otros estilos existentes */
+}
+
+/* Estilo para la "X" */
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 20px; 
+  color: #0D5552;
+  font-size: 40px; 
+  text-decoration: none;
+  font-family: 'Bebas Neue', sans-serif; 
+  background: white; 
+  padding: 10px; 
+}
+
 #container_descripcion h2{
     size: 50px;
     padding-top: 40px;
