--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -1,138 +1,184 @@
 body {
-    background-color: #0E1720 !important;
-    margin: 0; 
-    color: #13847E;
-    font-family: "Bebas Neue", sans-serif;
+  background-color: #0E1720 !important;
+  margin: 0; 
+  color: #13847E;
+  font-family: "Bebas Neue", sans-serif;
 }
 .navbar{
-  background-color: #0D5552;
+background-color: #0D5552;
 }
 main{
-  margin-bottom: 24px;
+margin-bottom: 24px;
 }
 
 .rectangulopestaña {
-  width: 240px; 
-  height: 40px; 
+  width: 200px;
+  height: 50px;
   margin-left: 80px;
   background-color: #ffffff;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  position: relative;
+}
+
+.rectangulopestaña::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -50px; 
+  width: 0;
+  height: 0px;
+  border-style: solid;
+  border-width: 52px 0 0px 52px;
+  border-color: transparent transparent transparent #ffffff;
+  transform: translateY(-50%);
+  transition: all 0.3s ease;
+}
+
+.rectangulopestaña:hover::after {
+  border-color: transparent transparent transparent #ffffff; / Cambia el color del triángulo al hacer hover */
 }
 
 #container_principal{
-    background-color: #ffffff;
-    padding: 0px;
+  background-color: #ffffff;
+  padding: 0px;
+  padding-bottom: 60px;
 }
+
+/* Estilo para el contenedor principal */
+#container_principal {
+  position: relative; /* Permitir posicionamiento absoluto de elementos hijos */
+  /* Otros estilos existentes */
+}
+
+/* Estilo para la "X" */
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 20px; 
+  color: #0D5552;
+  font-size: 40px; 
+  text-decoration: none;
+  font-family: 'Bebas Neue', sans-serif; 
+  background: white; 
+  padding: 10px; 
+}
+
 
 /* descripcion */
 #container_titulo{
-  padding: 50px;
-  padding-bottom: 0px !important;
-  margin: 0px;
+padding: 50px;
+padding-bottom: 0px !important;
+margin: 0px;
 }
 
 #container_titulo h1{
-  padding: 0px;
-  margin: 0px;
+padding: 0px;
+margin: 0px;
 }
 
 #container_titulo p{
-  height: 182px;
-  margin-bottom: 5px;
-  text-align: left;
-  padding: 50px;
-  padding-bottom: 0px !important;
-  font-size: 22px;
-  letter-spacing: 1%;
+height: 182px;
+margin-bottom: 5px;
+text-align: left;
+padding: 50px;
+padding-bottom: 0px !important;
+font-family: "Nunito Sans", sans-serif;
+font-size: 22px;
 }
 
 /* areas */
-#container_principal h2{
-  padding: 60px;
-  padding-bottom: 0px !important;
-  margin: 0px;
+#area{
+padding: 60px;
+padding-bottom: 0px !important;
+margin: 0px;
 }
 
 /* contenido */
 .container_doble{
-  padding: 60px;
-  padding-bottom: 0px;
-  margin: 0px;
-}
-#contenido_final{
-  padding-bottom: 50px;
+padding: 60px;
+padding-bottom: 0px;
+margin: 0px;
 }
 
 .container_doble .col-3{
-  font-family: "Nunito Sans", sans-serif;
-  padding: 0px;
-  margin: 0px;
+font-family: "Nunito Sans", sans-serif;
+padding: 0px;
+margin: 0px;
 }
 
 .container_doble .col-3 h3{
-  padding-right: 50px;
-  font-size: 25px;
-  align-items: start;
-  justify-content: start;
+padding-right: 50px;
+font-size: 25px;
+align-items: start;
+justify-content: start;
+font-family: "Bebas Neue", sans-serif;
+cursor: pointer;
 }
 
 .container_doble .col-9{
-  font-family: "Nunito Sans", sans-serif;
-  padding: 0px;
-  margin: 0px;
+font-family: "Nunito Sans", sans-serif;
+padding: 0px;
+margin: 0px;
 }
 
 .container_doble .col-9 p{
-  font-size: 22px;
-  align-items: start;
-}
-
-#imagen_industrial, #imagen_grafico, #imagen_interaccion{
-  width: 300px;
-  height: 300px;
+font-size: 22px;
+align-items: start;
 }
 
 /* contenido oculto */
 .contenido-oculto {
-  background-color: #A3D4D2; /* Cambia el color de fondo del contenido oculto */
-  height: calc(100% - 40px);
-  overflow-y: auto; /* Agrega un desplazamiento vertical si el contenido es demasiado grande */
+background-color: #A3D4D2; /* Cambia el color de fondo del contenido oculto */
+height: calc(100% - 40px);
+overflow-y: auto; /* Agrega un desplazamiento vertical si el contenido es demasiado grande */
 }
 
 #contenido-1, #contenido-2, #contenido-3{
-  display: none;
+display: none;
 }
 
-.contenido-oculto h3{
-  font-size: 50;
-  margin-left: 40px;
+.contenido-oculto .row{
+padding: 40px;
+}
+
+.contenido-oculto h2{
+font-size: 22;
+padding-bottom: 50px;
+}
+
+.contenido-oculto .col-5{
+justify-content: center;
+align-items: center;
+display: flex;
 }
 
 .contenido-oculto .col-7{
-  padding-left: 30px;
-  padding-right: 30px;
-  
-  text-align: left;
-  max-width: 800px;
+text-align: left;
+max-width: 800px;
 }
 
 .contenido-oculto p{
-  font-size: 22;
-  font-family: "Nunito Sans", sans-serif;
+font-family: "Nunito Sans", sans-serif;
+font-size: 22px;
+height: 100%; /* Asegura que p ocupe todo el ancho de col-7 */
+width: 100%;
+margin: 0;
+}
+
+#imagen_industrial, #imagen_grafico, #imagen_interaccion{
+width: 300px;
+height: 300px;
 }
 
 /* Estilo del triángulo */
 .triangulo {
-  display: inline-block;
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #000; /* Cambia el color del triángulo si lo deseas */
-  margin-left: 5px; /* Ajusta el margen según sea necesario */
-  cursor: pointer;
+display: inline-block;
+width: 0;
+height: 0;
+border-left: 5px solid transparent;
+border-right: 5px solid transparent;
+border-bottom: 5px solid #000; /* Cambia el color del triángulo si lo deseas */
+margin-left: 5px; /* Ajusta el margen según sea necesario */
+cursor: pointer;
 }
 
 @media (max-width: 375.98px) {
