--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -108,11 +108,14 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Puedes ajustar la altura según sea necesario */
 }
 
 /* La imagen se ajustará responsivamente */
 img {
   max-width: 100%;
   height: auto;
+  margin-bottom: 40px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
