--- a/css/diseñouxyui.css
+++ b/css/diseñouxyui.css
@@ -71,6 +71,7 @@ main{
     padding-top: 40px;
     margin-bottom: 40px;
     margin-left: 40px;
+    font-size: 50px;
 }
  #container_descripcion1 p{
     max-width: 800px;
@@ -78,6 +79,7 @@ main{
     padding: 0 20px;
     text-align: left;
     font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
 }
 
 #container_descripcion p{
@@ -86,6 +88,7 @@ main{
     padding: 0 20px;
     text-align: left;
     font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
 }
 
 h1 {
