--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -51,6 +51,7 @@ main{
     padding: 0 20px;
     text-align: left;
     font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
   }
 
 #container_principal{
@@ -87,6 +88,7 @@ main{
     padding-top: 40px;
     margin-bottom: 40px;
     margin-left: 40px;
+    font-size: 50px;
 }
  #container_descripcion1 p{
     max-width: 800px;
@@ -94,6 +96,7 @@ main{
     padding: 0 20px;
     text-align: left;
     font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
 }
 
 #container_descripcion p{
@@ -102,6 +105,7 @@ main{
     padding: 0 20px;
     text-align: left;
     font-family: "Nunito Sans", sans-serif;
+    font-size: 22px;
 }
 
 .container-img {
