--- a/footer/footer.css
+++ b/footer/footer.css
@@ -3,29 +3,21 @@ footer{
     color: white;
     font-family: "Bebas Neue", sans-serif;
 }
-
-#footer .row .col-4{
-    margin: 100px;
-    margin-bottom: 15px;
+#footer{
+    max-height: 312px;
 }
 
-#footer .row .col-4 h3{
+#footer .footer{
+    padding: 50px;
+}
+
+#footer h3{
     font-size: 30px;
 }
 
-#footer .row .col-4 p{
+#footer p{
     font-family: "Nunito Sans", sans-serif;
     width: 355.07px;
-    height: 72px;
-    font-size: 18px;
-}
-
-#footer .row .col-2 h3{
-    font-size: 22px;
-    margin-top: 100px;
-}
-#footer .row .col-2 h4{
-    font-family: "Nunito Sans", sans-serif;
     font-size: 18px;
 }
 
@@ -42,9 +34,29 @@ footer{
     margin-left: 20px;
   }
   
-
-@media (max-width: 1206px){
-    .row .col-4 p{
-        width: auto;
+@media (max-width: 480px) {
+    /* Estilos para pantallas de 480px o menos (teléfonos pequeños) */
+    #footer h3{
+        font-size: 25px;
     }
+    #footer p{
+        font-size: 12px;
+    }
+}
+  
+@media (max-width: 600px) {
+      /* Estilos para pantallas de 600px o menos (teléfonos móviles) */
+}
+  
+@media (max-width: 768px) {
+
+
+}
+  
+@media (max-width: 1201px) {
+
+}
+  
+@media (min-width: 1280px) {
+  
 }
