--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -215,27 +215,44 @@ main{
   align-items: center;
 }
 
+@media (max-width: 480px) {
+  #container_principal{
+    width: 326px;
+    height: 100%;
+  }
+  #descripcion {
+    padding: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  #descripcion h1 {
+    font-size: 30px;
+  }
 
-@media (max-width: 375.98px) {
+  #descripcion p {
+    max-height: 100%;
+    padding: 0;
+    padding-top: 20px;
+    font-size: 15px;
+  }
 
-}
-
-@media (max-width: 575.98px) {
-
-}
-
-@media (max-width: 767.98px) {
-
-}
-
-@media (max-width: 991.98px) {
-
-}
-
-@media (max-width: 1199.98px) {
-
-}
-
-@media (max-width: 1399.98px) {
-
+  #categorias {
+    font-size: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .container_doble {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: block;
+  }
+  
+  .container_doble .col-3 h3 {
+    padding-right: 20px;
+    font-size: 25px;
+  }
+  .container_doble .col-9 p {
+    font-size: 15px;
+    align-items: start;
+  }
 }
