--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -44,7 +44,7 @@ main{
     size: 50px;
   }
   
-  p{
+  #container_principal p{
     max-width: 800px;
     margin-bottom: 5px;
     margin: 50px auto;
@@ -83,35 +83,11 @@ main{
   padding: 10px; 
 }
 
-#container_descripcion h2{
-    size: 50px;
-    padding-top: 40px;
-    margin-bottom: 40px;
-    margin-left: 40px;
-    font-size: 50px;
-}
- #container_descripcion1 p{
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 0 20px;
-    text-align: left;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 22px;
-}
-
-#container_descripcion p{
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 0 20px;
-    text-align: left;
-    font-family: "Nunito Sans", sans-serif;
-    font-size: 22px;
-}
-
 .container-img {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 /* La imagen se ajustará responsivamente */
@@ -122,4 +98,21 @@ img {
   margin-right: 40px;
   margin-bottom: 40px;
   margin-top: 40px;
+}
+
+@media (max-width: 480px) {
+  #container_principal{
+    width: 326px;
+    height: 100%;
+  }
+  #container_principal .p{
+    font-size: 15px;
+  }
+  .container-img {
+    display: block;
+  }
+  .container-img img {
+    display: block; /* Cada imagen en su propia línea */
+    margin: 10px auto; /* Centrar las imágenes y añadir espacio entre ellas */
+  }
 }
