--- a/nav/nav.css
+++ b/nav/nav.css
@@ -58,6 +58,7 @@
     .navbar {
         padding-left: 10px;
         padding-right: 10px;
+        margin: 0;
     }
     #nav_home{
         font-size: 50px;
