--- a/css/patrones.css
+++ b/css/patrones.css
@@ -168,6 +168,11 @@ h3 {
 }
 
 @media (max-width: 480px) {
+
+    .rectangulopestaña{
+        margin-left: 32px;
+      }
+
     #container_principal{
       width: 326px;
       height: 100%;
