--- a/css/patronesoscuros.css
+++ b/css/patronesoscuros.css
@@ -216,6 +216,11 @@ main{
 }
 
 @media (max-width: 480px) {
+
+  .rectangulopestaña{
+    margin-left: 32px;
+  }
+
   #container_principal{
     width: 326px;
     height: 100%;
