--- a/css/que_buscamos.css
+++ b/css/que_buscamos.css
@@ -101,6 +101,11 @@ img {
 }
 
 @media (max-width: 480px) {
+
+  .rectangulopestaña{
+    margin-left: 32px;
+  }
+
   #container_principal{
     width: 326px;
     height: 100%;
