--- a/css/tiposdediseño.css
+++ b/css/tiposdediseño.css
@@ -182,6 +182,11 @@ font-size: 22px;
 }
 
 @media (max-width: 480px) {
+
+  .rectangulopestaña{
+    margin-left: 32px;
+  }
+
   #container_principal{
     max-width: 326px;
   }
