--- a/nav/nav.css
+++ b/nav/nav.css
@@ -38,8 +38,9 @@
 @media (max-width: 480px) {
     /* Estilos para pantallas de 480px o menos (teléfonos pequeños) */
     .navbar {
-        padding-left: 10px !important;
-        padding-right: 10px !important;
+        padding: 0px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     #nav_home{
         font-size: 40px;
